package com.directi.training.dip.exercise_refactored;
public interface Encoder {
    String encode(String input);
}
