package com.directi.training.dip.exercise_refactored;
public interface NetworkSource {
    String fetchDataFromNetwork() throws IOException;
}